# pyiron_atomistics

./: .coveragerc  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  aabdelkawy.md  core.cmti001.1713  core.cmti001.33066  core.cmti001.36079  core.cmti001.37237  core.cmti001.38541  core.cmti001.40830  core.cmti001.6302  fd  pyproject.toml  setup.cfg  setup.py
.ci_support/: build_integration_notebooks.sh  condamerge.py  environment-docs.yml  environment-notebooks.yml  environment-old.yml  environment.yml  pyironconfig.py  pypi_vs_conda_names.json  release.py  test_backwards.sh  update_environment.py
.github/: dependabot.yml  labeler.yml
.github/workflows/: UpdateDependabotPR.yml  backwards.yml  benchmarks.yml  black.yml  coverage.yml  dependabot.yml  deploy.yml  docs.yml  format_black.yml  integration.yml  integration_unittests.yml  label_integration.yml  notebooks.yml  pipeline.yml  pypicheck.yml  unittests.yml  unittests_old.yml
binder/: environment.yml  postBuild
docs/: README.md  _config.yml  _toc.yml  about.md  api.rst  conf.py  environment.yml  examples.md  faq.md  import.md  index.md  index.rst  installation.md
docs/source/: about.rst  indices.rst  installation.rst
notebooks/: Thermodynamics_QHA.ipynb  bandstructure.ipynb  data_mining.ipynb  elastic_constants.ipynb  energy_volume_curve.ipynb  first_steps.ipynb  gamma_surface_parallel_master.ipynb  hcp_workfunction.ipynb  lammps-fe-c-example.ipynb  phonopy_example.ipynb  pipeline.ipynb  sqs.ipynb  structures.ipynb  test_lammps_reload.ipynb  test_pyiron_installation.ipynb  tests_sphinx_sphinx_check_all.ipynb  water_MD.ipynb
notebooks/integration/: InteractiveOutputTest.ipynb  interactive_units.ipynb
pyiron_atomistics/: __init__.py  _tests.py  _version.py  project.py  toolkit.py
pyiron_atomistics/atomistics/generic/: object_type.py
pyiron_atomistics/atomistics/job/: atomistic.py  interactive.py  interactivewrapper.py  potentials.py  sqs.py  structurecontainer.py
pyiron_atomistics/atomistics/master/: convergence_volume.py  elastic.py  elasticmatrix.py  murnaghan.py  parallel.py  phonopy.py  qha.py  quasi.py  serial.py  sqsmaster.py  structure.py
pyiron_atomistics/atomistics/nma/: nma.py
pyiron_atomistics/atomistics/structure/: _visualize.py  analyse.py  atom.py  atoms.py  factory.py  has_structure.py  neighbors.py  periodic_table.py  phonopy.py  pyironase.py  pyscal.py  pyxtal.py  sparse_list.py  strain.py  structurestorage.py  symmetry.py
pyiron_atomistics/atomistics/thermodynamics/: thermo_bulk.py
pyiron_atomistics/atomistics/volumetric/: generic.py
pyiron_atomistics/calphy/: base.py  calphy.py  job.py
pyiron_atomistics/dataclasses/: calculation.py
pyiron_atomistics/dft/: bader.py
pyiron_atomistics/dft/job/: bader.py  generic.py
pyiron_atomistics/dft/master/: convergence_encut_parallel.py  convergence_encut_serial.py  convergence_kpoint_parallel.py  murnaghan_dft.py
pyiron_atomistics/dft/volumetric/: generic.py
pyiron_atomistics/dft/waves/: bandstructure.py  dos.py  electronic.py
pyiron_atomistics/gaussian/: gaussian.py
pyiron_atomistics/generic/: object_type.py
pyiron_atomistics/gpaw/: gpaw.py  pyiron_ase.py
pyiron_atomistics/interactive/: activation_relaxation_technique.py  quasi_newton.py  scipy_minimizer.py  sxextoptint.py
pyiron_atomistics/job/: atomistic.py  interactive.py  interactivewrapper.py  sqs.py  structurecontainer.py
pyiron_atomistics/lammps/: __init__.py  base.py  control.py  engine.py  interactive.py  lammps.py  lammps_io.py  output.py  potential.py  potentials.py  structure.py  units.py  wrapper.py
pyiron_atomistics/master/: convergence_volume.py  elastic.py  murnaghan.py  parallel.py  phonopy.py  quasi.py  serial.py  sqsmaster.py  structure.py
pyiron_atomistics/quickff/: quickff.py
pyiron_atomistics/sphinx/: base.py  data.yaml  input_functions.py  input_writer.py  interactive.py  output_parser.py  parser_base.py  potential.py  sphinx.py  spx_input.py  structure.py  util.py  volumetric_data.py  work.code-workspace
pyiron_atomistics/structure/: analyse.py  atom.py  atoms.py  factory.py  has_structure.py  neighbors.py  periodic_table.py  pyscal.py  structurestorage.py
pyiron_atomistics/structure/factories/: aimsgb.py  ase.py  atomsk.py  compound.py  materialsproject.py
pyiron_atomistics/table/: datamining.py  funct.py
pyiron_atomistics/testing/: executable.py  randomatomistic.py
pyiron_atomistics/thermodynamics/: hessian.py  interfacemethod.py  sxphonons.py  thermo_bulk.py
pyiron_atomistics/vasp/: base.py  interactive.py  metadyn.py  oszicar.py  outcar.py  output.py  potential.py  procar.py  report.py  structure.py  vasp.py  vasprun.py  vaspsol.py  volumetric_data.py
pyiron_atomistics/vasp/parser/: oszicar.py  outcar.py  (+1 more)
pyiron_atomistics/yaff/: yaff.py
test_integration/: test_gpaw.py  tests_sphinx_sphinx_check_all.py
tests/: test_project.py  test_toolkit.py
tests/backwards/: test_sphinx_load.py  test_sphinx_save.py  test_structure_container_load.py  test_structure_container_save.py
tests/calphy/: test_base.py
tests/dft/: test_bader.py
tests/gpaw/: test_gpaw.py
tests/interactive/: test_activation_relaxation_technique.py  test_quasi_newton.py  test_scipyminimizer.py  test_sxextoptint.py
tests/lammps/: test_base.py  test_control.py  test_interactive.py  test_potentials.py  test_structure.py
tests/quickff_module/: test_quickff.py
tests/sphinx/: test_base.py  test_input_functions.py  test_interactive.py  test_parsers.py  test_structure.py  test_util.py
tests/table/: test_datamining.py
tests/testing/: test_exampleAtomisticJob.py  test_exampleJob.py  test_exampleJobLib.py  test_exampleJob_non_modal.py  test_serialMaster.py  test_serialMaster_non_modal.py
tests/thermodynamics/: test_hessianJob.py  test_interface.py
tests/vasp/: test_oszicar.py  test_outcar.py  test_potential.py  test_structure.py  test_vasp.py  test_vasp_import.py  test_vasp_restart.py  test_vasprun.py  test_volumetric_data.py
tests/yaff_module/: test_yaff.py
(+118 files in other folders)
