[build-system]
requires = ["ase", "assyst", "atomistics", "defusedxml", "h5py", "matplotlib", "mendeleev", "mp-api", "numpy", "pandas", "phonopy", "pint", "pyiron_base", "pylammpsmpi", "scipy", "scikit-learn", "seekpath", "setuptools", "spglib", "structuretoolkit", "hatchling==1.28.0", "hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[project]
name = "pyiron_atomistics"
description = "An interface to atomistic simulation codes including but not limited to GPAW, LAMMPS, S/Phi/nX and VASP."
authors = [
    { name = "Max-Planck-Institut für Eisenforschung GmbH - Computational Materials Design (CM) Department", email = "pyiron@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyiron"]
requires-python = ">=3.11, <3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "ase==3.27.0",
    "assyst==0.11.0",
    "atomistics==0.3.5",
    "defusedxml==0.7.1",
    "h5py==3.15.1",
    "matplotlib==3.10.8",
    "mendeleev==1.1.0",
    "mp-api==0.46.0",
    "numpy==2.3.5",
    "pandas==3.0.0",
    "phonopy==2.47.1",
    "pint==0.25.2",
    "pyiron_base==0.15.12",
    "lammpsparser==0.0.1",
    "pyiron_snippets==1.0.2",
    "pyiron_vasp==0.2.18",
    "pylammpsmpi==0.3.9",
    "pyscal3==3.3.0",
    "scipy==1.16.3",
    "scikit-learn==1.8.0",
    "seekpath==2.2.1",
    "spglib==2.7.0",
    "structuretoolkit==0.0.39",
    "sphinx-parser==0.1.6",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://pyiron.org"
Documentation = "https://pyiron.readthedocs.io"
Repository = "https://github.com/pyiron/pyiron_atomistics"

[tool.hatch.build]
include = [
    "pyiron_atomistics"
]

[tool.hatch.build.hooks.vcs]
version-file = "pyiron_atomistics/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "pyiron_atomistics"
]

[tool.hatch.build.targets.wheel]
packages = [
    "pyiron_atomistics"
]

[tool.hatch.version]
source = "vcs"
path = "pyiron_atomistics/_version.py"

[tool.coverage.run]
omit = ["pyiron_atomistics/_version.py", "tests/*"]
command_line = "-m unittest discover tests"
